@@ -1,5 +1,5 @@
 /*
- * $Id: gtsln.c,v 1.33 2002/06/27 19:25:32 dholm Exp $
+ * $Id: gtsln.c,v 1.4 2002/04/16 16:12:18 map Exp $
  */
 
 /*
@@ -54,7 +54,7 @@
 
 /* *********************************************************************** */
 
-#include <slang.h>
+#include "gtsln.h"
 
 /* missing defines in previous versions of Slang - this can not work ! */
 #if SLANG_VERSION < 10400
@@ -81,13 +81,9 @@
 #endif
 #endif
 
-#include <unistd.h>
+//#include <unistd.h>
 #include <signal.h>
 #include <time.h>
-
-#include "hbapi.h"
-#include "hbapigt.h"
-#include "inkey.ch"
 
 /* *********************************************************************** */
 
@@ -97,6 +93,9 @@
 /* to convert DeadKey+letter to national character */
 extern unsigned char s_convKDeadKeys[];
 extern int hb_gt_Init_Terminal( int phase );
+
+/* standard output */
+/* static int s_iFilenoStdout; */
 
 /* to convert characters displayed */
 static void hb_gt_build_conv_tabs();
@@ -113,14 +112,9 @@ unsigned char *hb_NationCharsEnvName = "HRBNATIONCHARS";
 
 static USHORT s_uiDispCount = 0;
 static SHORT s_sCursorStyle = SC_NORMAL;
-static BOOL s_linuxConsole = FALSE;
-static BOOL s_underXTerm = FALSE;
 
 /* indicate if we are currently running a command from system */
 static BOOL s_bSuspended = FALSE;
-
-/* standard output */
-static int s_iFilenoStdout;
 
 /* to convert high characters (mostly graphics, nation and control chars) */
 static SLsmg_Char_Type s_convHighChars[ 256 ];
@@ -172,7 +166,7 @@ void hb_gt_Init( int iFilenoStdin, int iFilenoStdout, int iFilenoStderr )
 
    HB_TRACE(HB_TR_DEBUG, ("hb_gt_Init()"));
 
-   s_iFilenoStdout = iFilenoStdout;
+   /* s_iFilenoStdout = iFilenoStdout; */
    s_uiDispCount = 0;
 
    /* read a terminal descripion from a terminfo database */
@@ -205,22 +199,6 @@ void hb_gt_Init( int iFilenoStdin, int iFilenoStdout, int iFilenoStderr )
             /* turn on a cursor visibility */
             if( SLtt_set_cursor_visibility( 1 ) == -1 )
                s_sCursorStyle = SC_UNAVAIL;
-
-            /* an uncertain way to check if we run under linux console */
-            {
-               char * tmp = hb_getenv( "TERM" );
-               s_linuxConsole = tmp && tmp[ 0 ] != '\0' && ( strncmp( tmp, "linux", 5 ) == 0 );
-               if( tmp )
-                  hb_xfree( ( void * ) tmp );
-            }
-
-            /* an uncertain way to check if we run under xterm */
-            {
-               char * tmp = hb_getenv( "TERM" );
-               s_underXTerm = tmp && tmp[ 0 ] != '\0' && ( strncmp( tmp, "xterm", 5 ) == 0 );
-               if( tmp )
-                  hb_xfree( ( void * ) tmp );
-            }
 
             /* NOTE: this driver is implemented in a way that it is
                imposible to get intensity/blinking background mode.
@@ -268,9 +246,17 @@ void hb_gt_Init( int iFilenoStdin, int iFilenoStdout, int iFilenoStderr )
 
 void hb_gt_Exit( void )
 {
-   char *escstr;
-
    HB_TRACE(HB_TR_DEBUG, ("hb_gt_Exit()"));
+
+   /* restore a standard bell frequency and duration */
+   if( hb_gt_UnderLinuxConsole )
+   {
+      char *escstr;
+
+      escstr = "\033[10]";  SLtt_write_string( escstr );
+      escstr = "\033[11]";  SLtt_write_string( escstr );
+      SLtt_flush_output();
+   }
 
    hb_mouse_Exit();
 
@@ -281,15 +267,6 @@ void hb_gt_Exit( void )
    SLsmg_refresh();
    SLsmg_reset_smg();
    SLang_reset_tty();
-
-   /* restore a standard bell frequency and duration */
-   if( s_linuxConsole )
-   {
-      escstr = "\033[10]";
-      write( s_iFilenoStdout, escstr, strlen( escstr ) );
-      escstr = "\033[11]";
-      write( s_iFilenoStdout, escstr, strlen( escstr ) );
-   }
 }
 
 /* *********************************************************************** */
@@ -340,7 +317,12 @@ void hb_gt_SetPos( SHORT iRow, SHORT iCol, SHORT iMethod )
    /* SLtt_goto_rc( iRow, iCol ); */
 
    if( s_uiDispCount == 0 )
+   {
       SLsmg_refresh();
+#ifdef HAVE_GPM_H
+      hb_mouse_FixTrash();
+#endif
+   }
 }
 
 /* *********************************************************************** */
@@ -438,7 +420,7 @@ void hb_gt_SetCursorStyle( USHORT uiStyle )
 
 #ifdef __linux__
       /* NOTE: cursor apearence works only under linux console */
-      if( s_linuxConsole )
+      if( hb_gt_UnderLinuxConsole )
       {
          switch( uiStyle )
          {
@@ -762,7 +744,7 @@ void hb_gt_Tone( double dFrequency, double dDuration )
    dFrequency = HB_MIN( HB_MAX( 0.0, dFrequency ), 32767.0 );
    /* dDuration = dDuration * 1000.0 / 18.2; */ /* clocks */
 
-   if( s_linuxConsole )
+   if( hb_gt_UnderLinuxConsole )
    {
       snprintf( escstr, 63, "\033[10;%hd]", ( int )dFrequency );
       SLtt_write_string( escstr );
@@ -773,7 +755,7 @@ void hb_gt_Tone( double dFrequency, double dDuration )
 
    SLtt_beep();
 
-   if( s_linuxConsole )
+   if( hb_gt_UnderLinuxConsole )
    {
       /* NOTE : the code below is adapted from gtdos.c/hb_gt_Tone() */
 
@@ -1124,7 +1106,7 @@ BOOL hb_gt_PostExt()
 static void hb_gt_build_conv_tabs()
 {
    int i, fg, bg, len;
-   unsigned char * p, * env, ch;
+   unsigned char * p, ch;
    SLsmg_Char_Type SLch;
 
    /* COMPATIBILITY: Slang uses bit 0x8000 as an alternate
@@ -1220,7 +1202,7 @@ static void hb_gt_build_conv_tabs()
    }
 
    /* QUESTION: do we have double, single-double, ... frames under xterm ? */
-   if( s_underXTerm )
+   if( hb_gt_UnderXterm )
    {
       /* frames of all Clipper type are _B_SINBLE under xterm */
       s_convHighChars[ 205 ] = s_convHighChars[ 196 ];
@@ -1246,12 +1228,11 @@ static void hb_gt_build_conv_tabs()
 
    /* init national chars */
 
-   env = hb_getenv( hb_NationCharsEnvName );
-   p = env;
+   p = hb_getenv( hb_NationCharsEnvName );
 
    if( p && p[ 0 ] != '\0' )
    {
-      unsigned char Pos, Msk;
+      unsigned char Pos, Msk, * s = p;
 
       len = strlen( p );
 
@@ -1277,6 +1258,7 @@ static void hb_gt_build_conv_tabs()
          s_IsNationChar[ Pos ] |= Msk;
          ++p;
       }
+      p = s;
 /*
       for( i=0; i <= ( ( int ) s_convKDeadKeys[ 0 ] ) * 2; i++ )
          fprintf( stderr, "%3d %c\r\n", i, s_convKDeadKeys[ i ] );
@@ -1284,8 +1266,8 @@ static void hb_gt_build_conv_tabs()
 */
    }
 
-   if( env )
-      hb_xfree( ( void * ) env );
+   if( p )
+      hb_xfree( ( void * ) p );
 }
 
 /* *********************************************************************** */
